# finalbackend

./: .env  historyModel.js  package-lock.json  package.json  requirements.txt  server.js
routes/: flipkart.js  jiomart.js  meshoo.js
tools/FlipkartCropper/: README.md  config.json  count.html  exp.ipynb  main.py  utils.py
tools/FlipkartCropper/output/job_2025-08-29T07-39-04-432Z/: summary_report_2025-08-29_13-09-54.xlsx
tools/FlipkartCropper/output/job_2025-08-30T04-54-09-128Z/: summary_report_2025-08-30_10-24-42.xlsx
tools/JioMartCropper/: README.md  count.html  exp.ipynb  main.py  pyproject.toml  utils.py
tools/JioMartCropper/output/job_2025-08-30T04-58-52-043Z/: summary_report_2025-08-30_10-29-02.xlsx
tools/JioMartCropper/output/job_2025-08-30T05-03-42-549Z/: summary_report_2025-08-30_10-34-01.xlsx
tools/JioMartCropper/output/job_2025-08-30T05-04-41-912Z/: summary_report_2025-08-30_10-34-59.xlsx
tools/JioMartCropper/output/job_2025-08-30T05-05-36-423Z/: summary_report_2025-08-30_10-36-17.xlsx
tools/MeshooCropper/: README.md  config.json  count.html  launch.bat  main.py  utils.py
tools/MeshooCropper/output/job_2025-08-30T05-01-57-780Z/: summary_2025-08-30_10-32-54.xlsx
