[tool.poetry]
name = "meeshocropper"
version = "0.1.0"
description = ""
authors = ["Amit Bera <amitalokbera@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pdfminer = "^20191125"
pdfrw = "^0.4"
pandas = "^2.2.3"
pypdf2 = "^3.0.1"
requests = "^2.32.3"
tqdm = "^4.67.0"
pymupdf = "^1.24.14"
pyhtml2pdf = "0.0.7"
pdfkit = "^1.0.0"
pretty-html-table = "^0.9.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false